feat: Implement Activity Categorization Backend - MEED-9166 - Meeds-io/MIPs#197 (#4826)
This change will implement the business logic in backend which will be
used in functional features of Stream as Forum.